Fix CSD border for Radiant-MATE with no compositor. Make scrollbars consistent. Correct size of switches in the header bar.

--- a/usr/share/themes/Radiant-MATE/gtk-3.0/apps/mate-applications.css
+++ b/usr/share/themes/Radiant-MATE/gtk-3.0/apps/mate-applications.css
@@ -31,6 +31,13 @@
     border-width: 1px 1px 0px 1px;
 }
 
+/* avoid double borders with caja views, as this was set for ff locationbar */
+/* event boxes, ie. trash-, search-boxes */
+.caja-notebook box.vertical > frame > border {
+    border-width: 1px 1px 0px 1px;
+    border-radius: 3px 3px 0px 0px;
+}
+
 .caja-canvas-item {
     border-radius: 3px;
 }
